--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
     <link rel="stylesheet" href="style.css">
-    <title>Valyrian Dictionary</title>
+    <title>High Valyrian Dictionary</title>
 </head>
 <body>
     <audio id="sound"></audio>
+    <!-- <h2 class="title">High Valyrian Dictionary</h2> -->
     <div class="container">
         <div class="search-box">
             <input type="text" placeholder="Type a word here" id="inp-word">
