--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>High Valyrian Dictionary</title>
 </head>
 <body>
     <audio id="sound"></audio>
-    <!-- <h2 class="title">High Valyrian Dictionary</h2> -->
     <div class="container">
+        <h2 class="title">High Valyrian Dictionary</h2>
         <div class="search-box">
             <input type="text" placeholder="Type a word here" id="inp-word">
             <button id="search-btn">Search</button>
         </div>
         <div class="result" id="result">
-            
+            <a href=""></a>
         </div>
     </div>
     <script src="script.js"></script>
